@@ -4,45 +4,61 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.stream.Collectors;
 
 import org.fenixedu.academic.domain.Grade;
 import org.fenixedu.academic.domain.GradeScale;
 import org.fenixedu.academic.domain.GradeScale.GradeScaleLogic;
-import org.fenixedu.commons.i18n.LocalizedString;
 import org.fenixedu.academic.domain.curriculum.grade.QualitativeGradeComparator;
+import org.fenixedu.commons.i18n.LocalizedString;
 
 public class ISEGTypeQualitativeGradeScaleLogic implements GradeScaleLogic {
 
-    /*private static final String A = "A";
-    private static final String SU = "SU";
-    private static final String B = "B";
-    private static final String BD = "BD";
-    private static final String MB = "MB";
-    private static final String E = "E";
-    private static final String AD = "AD";
-    private static final String ADL = "ADL";
-    private static final String R = "R";*/
+    private static final String REU = "REU";
+    private static final String REM = "REM";
+    private static final String APM = "APM";
+    private static final String APU = "APU";
+    private static final String APDM = "APDM";
+    private static final String APDU = "APDU";
+    private static final String APDLU = "APDLU";
+    private static final String APBM = "APBM";
+    private static final String APBU = "APBU";
+    private static final String APMBM = "APMBM";
+    private static final String APMBU = "APMBU";
+    private static final String APMBDU = "APMBDU";
 
-    private static final List<String> SORTED_GRADES = Arrays.asList(/*A, AD, ADL, SU, B, BD, MB, E, R*/);
+    private static final List<String> SORTED_GRADES =
+            Arrays.asList(APM, APU, APDM, APDU, APDLU, APBM, APBU, APMBM, APMBU, APMBDU, REM, REU);
     private static final QualitativeGradeComparator COMPARATOR = new QualitativeGradeComparator(SORTED_GRADES);
 
     private static Map<String, LocalizedString> CONFIGURATION = new HashMap<String, LocalizedString>();
 
     static {
-        /*CONFIGURATION.put(R, new LocalizedString(Locale.getDefault(), "Recusado").with(Locale.ENGLISH, "Refused"));
-        CONFIGURATION.put(A, new LocalizedString(Locale.getDefault(), "Aprovado").with(Locale.ENGLISH, "Approved"));
-        CONFIGURATION.put(SU, new LocalizedString(Locale.getDefault(), "Suficiente").with(Locale.ENGLISH, "Sufficient"));
-        CONFIGURATION.put(B, new LocalizedString(Locale.getDefault(), "Bom").with(Locale.ENGLISH, "Good"));
-        CONFIGURATION.put(BD,
-                new LocalizedString(Locale.getDefault(), "Bom com Distinção").with(Locale.ENGLISH, "Good with Distinction"));
-        CONFIGURATION.put(MB, new LocalizedString(Locale.getDefault(), "Muito Bom").with(Locale.ENGLISH, "Very good"));
-        CONFIGURATION.put(E, new LocalizedString(Locale.getDefault(), "Excelente").with(Locale.ENGLISH, "Excellent"));
-        CONFIGURATION.put(AD, new LocalizedString(Locale.getDefault(), "Aprovado com Distinção").with(Locale.ENGLISH,
-                "Approved with Distinction"));
-        CONFIGURATION.put(ADL, new LocalizedString(Locale.getDefault(), "Aprovado com Distinção e Louvor").with(Locale.ENGLISH,
-                "Approved with Distinction and Honors"));*/
+        CONFIGURATION.put(APM,
+                new LocalizedString(Locale.getDefault(), "Aprovado por Maioria").with(Locale.ENGLISH, "Aprovado por Maioria"));
+        CONFIGURATION.put(APU, new LocalizedString(Locale.getDefault(), "Aprovado por Unanimidade").with(Locale.ENGLISH,
+                "Aprovado por Unanimidade"));
+        CONFIGURATION.put(APDM, new LocalizedString(Locale.getDefault(), "Aprovado com Distinção por Maioria")
+                .with(Locale.ENGLISH, "Aprovado com Distinção por Maioria"));
+        CONFIGURATION.put(APDU, new LocalizedString(Locale.getDefault(), "Aprovado com Distinção por Unanimidade")
+                .with(Locale.ENGLISH, "Aprovado com Distinção por Unanimidade"));
+        CONFIGURATION.put(APDLU, new LocalizedString(Locale.getDefault(), "Aprovado com Distinção e Louvor por Unanimidade")
+                .with(Locale.ENGLISH, "Aprovado com Distinção e Louvor por Unanimidade"));
+        CONFIGURATION.put(REM,
+                new LocalizedString(Locale.getDefault(), "Recusado por maioria").with(Locale.ENGLISH, "Recusado por maioria"));
+        CONFIGURATION.put(REU, new LocalizedString(Locale.getDefault(), "Recusado por unanimidade").with(Locale.ENGLISH, "Recusado por unanimidade"));
+        CONFIGURATION.put(APBM, new LocalizedString(Locale.getDefault(), "Aprovado com Bom por maioria").with(Locale.ENGLISH,
+                "Aprovado com Bom por maioria"));
+        CONFIGURATION.put(APBU, new LocalizedString(Locale.getDefault(), "Aprovado com Bom por unanimidade").with(Locale.ENGLISH,
+                "Aprovado com Bom por unanimidade"));
+        CONFIGURATION.put(APMBM, new LocalizedString(Locale.getDefault(), "Aprovado com Muito Bom por maioria").with(Locale.ENGLISH,
+                "Aprovado com Muito Bom por maioria"));
+        CONFIGURATION.put(APMBU, new LocalizedString(Locale.getDefault(), "Aprovado com Muito Bom por unanimidade").with(Locale.ENGLISH,
+                "Aprovado com Muito Bom por unanimidade"));
+        CONFIGURATION.put(APMBDU, new LocalizedString(Locale.getDefault(), "Aprovado com Muito Bom com distinção por unanimidade").with(Locale.ENGLISH,
+                "Aprovado com Muito Bom com distinção por unanimidade"));
 
     }
 
@@ -69,9 +85,7 @@ public class ISEGTypeQualitativeGradeScaleLogic implements GradeScaleLogic {
 
     @Override
     public boolean isNotApproved(Grade grade) {
-        //TODO
-        //return R.equals(grade.getValue());
-        return true;
+        return REM.equals(grade.getValue()) || REU.equals(grade.getValue());
     }
 
     @Override
