@@ -1,3 +1,4 @@
+- Improvement: added ISEG/ISCSP qualitative grades
 6.1.0 (22-10-2019)
 - Refactor: Invocation of method factory for Registration creation
 
